--- a/templates/etc/init.d/znc.debian.erb
+++ b/templates/etc/init.d/znc.debian.erb
@@ -15,7 +15,7 @@
 PATH=/sbin:/usr/sbin:/bin:/usr/bin
 DESC="znc, an advanced modular IRC bouncer"
 NAME=znc
-DAEMON=/usr/bin/$NAME
+DAEMON="<%= scope.lookupvar('znc::daemon_dir') %>/$NAME"
 DAEMON_ARGS="-d <%= scope.lookupvar('znc::params::zc_config_dir') %>"
 PIDFILE=/var/run/$NAME.pid
 SCRIPTNAME=/etc/init.d/$NAME
@@ -111,7 +111,7 @@ case "$1" in
 	esac
   ;;
   status)
-  if ! (ps ax | grep -v grep | grep /usr/bin/znc > /dev/null); then
+  if ! (ps ax | grep -v grep | grep $DAEMON > /dev/null); then
       log_daemon_msg "ZNC is not running"
       exit 1
     else
